Fix minor layout issue on sequence page (on mac at least).

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -367,6 +367,7 @@ button:focus {
   float: right;
   width: 90px;
   margin-right: 60px;
+  height: 32px;
 }
 #seq_stats {
   width: 40%;
